{{$NEXT}}

0.01      2017-03-15 11:10:40+00:00 UTC
    - Initial version, FIX 4.4 protocol