@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Reddit's feedback: add DESCRIPTION and NAME sections into POD
 
 0.01      2017-03-15 11:10:40+00:00 UTC
     - Initial version, FIX 4.4 protocol
